--- a/share/locale/pt_BR.json
+++ b/share/locale/pt_BR.json
@@ -3,15 +3,15 @@
     "preparing_files": "Comprimindo arquivos.",
     "give_this_url": "Dar este endereço ao destinatário:",
     "give_this_url_stealth": "Dar este endereço e linha HidServAuth ao destinatário:",
-    "give_this_url_receive": "Dar este endereço ao remetente:",
-    "give_this_url_receive_stealth": "Dar este endereço e HidServAuth ao remetente:",
+    "give_this_url_receive": "Enviar este endereço à pessoa remetente:",
+    "give_this_url_receive_stealth": "Dar este endereço e HidServAuth à pessoa remetente:",
     "ctrlc_to_stop": "Pressione Ctrl+C para interromper o servidor",
     "not_a_file": "{0:s} não é um ficheiro válido.",
     "not_a_readable_file": "{0:s} não é um ficheiro legível.",
     "no_available_port": "Não foi possível encontrar um pórtico disponível para iniciar o serviço onion",
     "other_page_loaded": "Endereço carregado",
     "close_on_timeout": "Interrompido ao final da contagem do cronômetro automático",
-    "closing_automatically": "Interrompido porque o download terminou",
+    "closing_automatically": "Interrompido após o término da transferência",
     "timeout_download_still_running": "Esperando que o download termine",
     "large_filesize": "Aviso: O envio de arquivos grandes pode levar várias horas",
     "systray_menu_exit": "Sair",
@@ -24,7 +24,7 @@
     "systray_upload_started_title": "OnionShare começou a carregar",
     "systray_upload_started_message": "Alguém começou a carregar arquivos no seu computador",
     "help_local_only": "Não use Tor (unicamente para programação)",
-    "help_stay_open": "Continuar a compartilhar depois do primeiro download",
+    "help_stay_open": "Continuar a compartilhar após o envio de documentos",
     "help_shutdown_timeout": "Parar de compartilhar após um número determinado de segundos",
     "help_stealth": "Usar autorização de cliente (avançado)",
     "help_receive": "Receber compartilhamentos ao invés de enviá-los",
@@ -68,7 +68,7 @@
     "error_ephemeral_not_supported": "OnionShare requer ao menos Tor 0.2.7.1 e python3-stem 1.4.0.",
     "gui_settings_window_title": "Configurações",
     "gui_settings_whats_this": "<a href='{0:s}'>O que é isso?</a>",
-    "gui_settings_stealth_option": "Usar autorização de cliente (legacy)",
+    "gui_settings_stealth_option": "Usar autorização de cliente",
     "gui_settings_stealth_hidservauth_string": "Após salvar a sua chave privada para reutilização, você pode\nclicar para copiar o seu HidServAuth.",
     "gui_settings_autoupdate_label": "Procurar a nova versão",
     "gui_settings_autoupdate_option": "Notificar-me quando uma nova versão estiver disponível",
@@ -77,7 +77,7 @@
     "gui_settings_autoupdate_check_button": "Procurar a nova versão",
     "gui_settings_general_label": "Configurações gerais",
     "gui_settings_sharing_label": "Compartilhando configurações",
-    "gui_settings_close_after_first_download_option": "Parar de compartilhar depois do primeiro download",
+    "gui_settings_close_after_first_download_option": "Parar de compartilhar após o envio dos arquivos",
     "gui_settings_connection_type_label": "Como OnionShare normalmente conecta-se a Tor?",
     "gui_settings_connection_type_bundled_option": "Use a versão de Tor que vem junto com OnionShare",
     "gui_settings_connection_type_automatic_option": "Tentar configuração automática com o Navegador Tor",
@@ -131,17 +131,17 @@
     "gui_tor_connection_error_settings": "Tente mudar nas configurações a forma como OnionShare se conecta à rede Tor.",
     "gui_tor_connection_canceled": "Não foi possível conectar à rede Tor.\n\nVerifique se você está conectada à Internet, e então abra OnionShare novamente e configure sua conexão à rede Tor.",
     "gui_tor_connection_lost": "Desconectado do Tor.",
-    "gui_server_started_after_timeout": "O tempo se esgotou antes do servidor iniciar.\nPor favor, crie um novo compartilhamento.",
-    "gui_server_timeout_expired": "O temporizador já se esgotou.\nPor favor, atualize-o antes de começar a compartilhar.",
-    "share_via_onionshare": "Compartilhar por meio de OnionShare",
+    "gui_server_started_after_timeout": "O tempo esgotou antes do servidor iniciar.\nPor favor, crie um novo compartilhamento.",
+    "gui_server_timeout_expired": "O temporizador já esgotou.\nPor favor, atualize-o antes de começar a compartilhar.",
+    "share_via_onionshare": "Compartilhar usando OnionShare",
     "gui_use_legacy_v2_onions_checkbox": "Usar endereços do tipo antigo",
-    "gui_save_private_key_checkbox": "Usar um endereço persistente (modo antigo)",
+    "gui_save_private_key_checkbox": "Usar o mesmo endereço",
     "gui_share_url_description": "<b>Qualquer pessoa</b> com este endereço do OnionShare pode <b>baixar</b> seus arquivos usando o <b>Tor Browser</b>: <img src='{}' />",
-    "gui_receive_url_description": "<b>Qualquer pessoa</b> com este endereço do OnionShare pode <b>fazer upload</b> de arquivos para o seu computador usando o <b>Tor Browser</b>: <img src='{}' />",
-    "gui_url_label_persistent": "Este compartilhamento não vai ser encerrado automaticamente.<br><br>Todos os compartilhamentos posteriores reutilizarão este endereço. (Para usar um endereço novo a cada vez, desligue a opção \"Usar endereço persistente\" nas configurações.)",
+    "gui_receive_url_description": "<b>Qualquer pessoa</b> com este endereço do OnionShare pode <b>carregar</b> arquivos no seu computador usando o <b>Tor Browser</b>: <img src='{}' />",
+    "gui_url_label_persistent": "Este compartilhamento não vai ser encerrado automaticamente.<br><br>Todos os compartilhamentos posteriores reutilizarão este endereço. (Para usar um endereço novo a cada vez, desative a opção \"Usar o mesmo endereço\" nas configurações.)",
     "gui_url_label_stay_open": "Este compartilhamento não sera encerrado automaticamente.",
-    "gui_url_label_onetime": "Este compartilhamento será encerrado depois da primeira vez que for utilizado.",
-    "gui_url_label_onetime_and_persistent": "Este compartilhamento não será encerrado automaticamente.<br><br>Todos os compartilhamentos posteriores reutilizarão este endereço. (Para usar endereços únicos a cada compartilhamento, desligue a opção \"Usar endereço persistente\" nas configurações.)",
+    "gui_url_label_onetime": "Este compartilhamento será encerrado após completar uma vez.",
+    "gui_url_label_onetime_and_persistent": "Este compartilhamento não será encerrado automaticamente.<br><br>Todos os compartilhamentos posteriores reutilizarão este endereço. (Para usar endereços únicos a cada compartilhamento, desative a opção \"Usar o mesmo endereço\" nas configurações.)",
     "gui_status_indicator_share_stopped": "Pronto para compartilhar",
     "gui_status_indicator_share_working": "Começando…",
     "gui_status_indicator_share_started": "Compartilhando",
@@ -149,8 +149,8 @@
     "gui_status_indicator_receive_working": "Começando…",
     "gui_status_indicator_receive_started": "Recebendo",
     "gui_file_info": "{} arquivos, {}",
-    "gui_file_info_single": "{} ficheiro, {}",
-    "history_in_progress_tooltip": "{} em progresso",
+    "gui_file_info_single": "{} arquivo, {}",
+    "history_in_progress_tooltip": "{} em curso",
     "history_completed_tooltip": "{} completado",
     "info_in_progress_uploads_tooltip": "{} upload(s) em progresso",
     "info_completed_uploads_tooltip": "{} upload(s) completado(s)",
@@ -169,7 +169,7 @@
     "gui_settings_public_mode_checkbox": "Modo público",
     "systray_close_server_title": "Servidor OnionShare encerrado",
     "systray_close_server_message": "Um usuário encerrou o servidor",
-    "systray_page_loaded_title": "Página OnionShare Carregada",
+    "systray_page_loaded_title": "Página Carregada",
     "systray_download_page_loaded_message": "Um usuário carregou a página de download",
     "systray_upload_page_loaded_message": "Um usuário carregou a página de upload",
     "gui_uploads": "Histórico de Uploads",
@@ -180,7 +180,33 @@
     "gui_upload_finished": "Upload realizado de {}",
     "gui_download_in_progress": "Download Iniciado {}",
     "gui_open_folder_error_nautilus": "Não foi possível abrir a pasta porque o nautilus não está disponível. O arquivo está aqui: {}",
-    "gui_settings_language_label": "Idioma preferido",
-    "gui_settings_language_changed_notice": "Reinicie o OnionShare para que sua alteração de idioma tenha efeito.",
-    "timeout_upload_still_running": "Esperando o término do upload"
+    "gui_settings_language_label": "Idioma",
+    "gui_settings_language_changed_notice": "Reinicie OnionShare para que sua alteração de idioma tenha efeito.",
+    "timeout_upload_still_running": "Esperando o término do upload",
+    "gui_add_files": "Adicionar Documentos",
+    "gui_add_folder": "Adicionar Pasta",
+    "gui_share_mode_no_files": "Nenhum arquivo ainda enviado",
+    "gui_connect_to_tor_for_onion_settings": "Conectar ao Tor para ver as configurações do serviço onion",
+    "error_cannot_create_data_dir": "Pasta de dados OnionShare não foi criada: {}",
+    "receive_mode_data_dir": "Os arquivos que lhe foram enviados estão nesta pasta: {}",
+    "gui_settings_data_dir_label": "Salvar arquivos em",
+    "gui_settings_data_dir_browse_button": "Navegar",
+    "systray_share_started_title": "O compartilhamento iniciou",
+    "systray_share_started_message": "Iniciando o envio de arquivos",
+    "systray_share_completed_title": "O compartilhamento completou-se",
+    "systray_share_completed_message": "O envio de arquivos terminou",
+    "systray_share_canceled_title": "O compartilhamento foi anulado",
+    "systray_share_canceled_message": "Alguém cancelou o recebimento dos seus arquivos",
+    "systray_receive_started_title": "O recebimento iniciou",
+    "systray_receive_started_message": "Alguém está lhe enviando arquivos",
+    "gui_all_modes_history": "Histórico",
+    "gui_all_modes_clear_history": "Apagar Tudo",
+    "gui_all_modes_transfer_started": "Iniciou {}",
+    "gui_all_modes_transfer_finished_range": "Transferido {} - {}",
+    "gui_all_modes_transfer_finished": "Transferido {}",
+    "gui_all_modes_transfer_canceled_range": "Cancelado {} - {}",
+    "gui_all_modes_transfer_canceled": "Cancelado {}",
+    "gui_share_mode_timeout_waiting": "Esperando para completar o envio",
+    "gui_receive_mode_no_files": "Nenhum arquivo recebido",
+    "gui_receive_mode_timeout_waiting": "Esperando para completar o recebimento"
 }
