--- a/share/locale/ru.json
+++ b/share/locale/ru.json
@@ -181,5 +181,8 @@
     "gui_upload_finished": "Загружено {}",
     "gui_download_in_progress": "Загрузка началась {}",
     "gui_open_folder_error_nautilus": "Не удаётся открыть папку, поскольку файловый менджер Nautilus не доступен. Файл находится здесь: {}",
-    "gui_settings_language_changed_notice": "Перезапустите OnionShare, чтобы изменения языковых настроек вступили в силу."
+    "gui_settings_language_changed_notice": "Перезапустите OnionShare, чтобы изменения языковых настроек вступили в силу.",
+    "gui_add_files": "Добавить файлы",
+    "gui_add_folder": "Добавить папку",
+    "error_cannot_create_data_dir": "Не удалось создать папку данных OnionShare: {}"
 }
