Separete onion settings into their own group, and remove css that was breaking the look of the "Copy HidServAuth" button

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -56,13 +56,14 @@
     "gui_settings_window_title": "Settings",
     "gui_settings_whats_this": "<a href='{0:s}'>What's this?</a>",
     "gui_settings_stealth_option": "Use client authorization",
-    "gui_settings_stealth_hidservauth_string": "Having saved your private key for reuse, means you can now\nclick to copy your HidServAuth.",
+    "gui_settings_stealth_hidservauth_string": "Having saved your private key for reuse, means you can now click to copy your HidServAuth.",
     "gui_settings_autoupdate_label": "Check for new version",
     "gui_settings_autoupdate_option": "Notify me when a new version is available",
     "gui_settings_autoupdate_timestamp": "Last checked: {}",
     "gui_settings_autoupdate_timestamp_never": "Never",
     "gui_settings_autoupdate_check_button": "Check for New Version",
     "gui_settings_general_label": "General settings",
+    "gui_settings_onion_label": "Onion settings",
     "gui_settings_sharing_label": "Sharing settings",
     "gui_settings_close_after_first_download_option": "Stop sharing after files have been sent",
     "gui_settings_connection_type_label": "How should OnionShare connect to Tor?",
