Add a Startup Timer feature (scheduled start / dead man's switch)

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -15,6 +15,7 @@
     "large_filesize": "Warning: Sending a large share could take hours",
     "help_local_only": "Don't use Tor (only for development)",
     "help_stay_open": "Continue sharing after files have been sent",
+    "help_startup_timer": "Schedule this share to start N seconds from now",
     "help_shutdown_timeout": "Stop sharing after a given amount of seconds",
     "help_stealth": "Use client authorization (advanced)",
     "help_receive": "Receive shares instead of sending them",
@@ -42,6 +43,7 @@
     "gui_copied_url": "OnionShare address copied to clipboard",
     "gui_copied_hidservauth_title": "Copied HidServAuth",
     "gui_copied_hidservauth": "HidServAuth line copied to clipboard",
+    "gui_waiting_to_start": "Scheduled for {}. Click to cancel.",
     "gui_please_wait": "Starting… Click to cancel.",
     "version_string": "OnionShare {0:s} | https://onionshare.org/",
     "gui_quit_title": "Not so fast",
@@ -94,6 +96,8 @@
     "gui_settings_button_help": "Help",
     "gui_settings_shutdown_timeout_checkbox": "Use auto-stop timer",
     "gui_settings_shutdown_timeout": "Stop the share at:",
+    "gui_settings_startup_timer_checkbox": "Use auto-start timer",
+    "gui_settings_startup_timer": "Start the share at:",
     "settings_error_unknown": "Can't connect to Tor controller because your settings don't make sense.",
     "settings_error_automatic": "Could not connect to the Tor controller. Is Tor Browser (available from torproject.org) running in the background?",
     "settings_error_socket_port": "Can't connect to the Tor controller at {}:{}.",
@@ -133,9 +137,11 @@
     "gui_url_label_onetime_and_persistent": "This share will not auto-stop.<br><br>Every subsequent share will reuse the address. (To use one-time addresses, turn off \"Use persistent address\" in the settings.)",
     "gui_status_indicator_share_stopped": "Ready to share",
     "gui_status_indicator_share_working": "Starting…",
+    "gui_status_indicator_share_scheduled": "Scheduled…",
     "gui_status_indicator_share_started": "Sharing",
     "gui_status_indicator_receive_stopped": "Ready to receive",
     "gui_status_indicator_receive_working": "Starting…",
+    "gui_status_indicator_receive_scheduled": "Scheduled…",
     "gui_status_indicator_receive_started": "Receiving",
     "gui_file_info": "{} files, {}",
     "gui_file_info_single": "{} file, {}",
@@ -180,5 +186,7 @@
     "gui_share_mode_no_files": "No Files Sent Yet",
     "gui_share_mode_timeout_waiting": "Waiting to finish sending",
     "gui_receive_mode_no_files": "No Files Received Yet",
-    "gui_receive_mode_timeout_waiting": "Waiting to finish receiving"
+    "gui_receive_mode_timeout_waiting": "Waiting to finish receiving",
+    "waiting_for_startup_timer": "Waiting for the timer to run down before starting...",
+    "scheduled_onion_service": "Your OnionShare URL will be: {}"
 }
