--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -128,10 +128,10 @@
     "gui_tor_connection_error_settings": "Try changing how OnionShare connects to the Tor network in the settings.",
     "gui_tor_connection_canceled": "Could not connect to Tor.\n\nEnsure you are connected to the Internet, then re-open OnionShare and set up its connection to Tor.",
     "gui_tor_connection_lost": "Disconnected from Tor.",
-    "gui_server_started_after_timeout": "The auto-stop timer ran out before the server started.\nPlease make a new share.",
-    "gui_server_timeout_expired": "The auto-stop timer already ran out.\nPlease update it to start sharing.",
-    "gui_server_startup_timer_expired": "The scheduled time has already passed.\nPlease update it to start sharing.",
-    "gui_timeout_cant_be_earlier_than_startup": "The auto-stop time can't be the same or earlier than the start-up time.\nPlease update it to start sharing.",
+    "gui_server_started_after_timeout": "The auto-stop timer ran out before the server started. Please make a new share.",
+    "gui_server_timeout_expired": "The auto-stop timer already ran out. Please update it to start sharing.",
+    "gui_server_startup_timer_expired": "The scheduled time has already passed. Please update it to start sharing.",
+    "gui_timeout_cant_be_earlier_than_startup": "The auto-stop time can't be the same or earlier than the start-up time. Please update it to start sharing.",
     "share_via_onionshare": "OnionShare it",
     "gui_connect_to_tor_for_onion_settings": "Connect to Tor to see onion service settings",
     "gui_use_legacy_v2_onions_checkbox": "Use legacy addresses",
