Human-friendly autostart/autostop countdown timers on server button, tooltips

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -35,12 +35,12 @@
     "gui_choose_items": "Choose",
     "gui_share_start_server": "Start sharing",
     "gui_share_stop_server": "Stop sharing",
-    "gui_share_stop_server_shutdown_timeout": "Stop Sharing ({}s remaining)",
-    "gui_share_stop_server_shutdown_timeout_tooltip": "Auto-stop timer ends at {}",
+    "gui_share_stop_server_shutdown_timeout": "Stop Sharing ({})",
+    "gui_stop_server_shutdown_timeout_tooltip": "Auto-stop timer ends at {}",
+    "gui_start_server_startup_timer_tooltip": "Auto-start timer ends at {}",
     "gui_receive_start_server": "Start Receive Mode",
     "gui_receive_stop_server": "Stop Receive Mode",
     "gui_receive_stop_server_shutdown_timeout": "Stop Receive Mode ({}s remaining)",
-    "gui_receive_stop_server_shutdown_timeout_tooltip": "Auto-stop timer ends at {}",
     "gui_copy_url": "Copy Address",
     "gui_copy_hidservauth": "Copy HidServAuth",
     "gui_canceled": "Canceled",
@@ -48,7 +48,7 @@
     "gui_copied_url": "OnionShare address copied to clipboard",
     "gui_copied_hidservauth_title": "Copied HidServAuth",
     "gui_copied_hidservauth": "HidServAuth line copied to clipboard",
-    "gui_waiting_to_start": "Scheduled for {}. Click to cancel.",
+    "gui_waiting_to_start": "Scheduled to start in {}. Click to cancel.",
     "gui_please_wait": "Starting… Click to cancel.",
     "version_string": "OnionShare {0:s} | https://onionshare.org/",
     "gui_quit_title": "Not so fast",
@@ -194,5 +194,9 @@
     "gui_share_mode_timeout_waiting": "Waiting to finish sending",
     "gui_receive_mode_no_files": "No Files Received Yet",
     "gui_receive_mode_timeout_waiting": "Waiting to finish receiving",
-    "waiting_for_scheduled_time": "Waiting for the scheduled time before starting..."
+    "waiting_for_scheduled_time": "Waiting for the scheduled time before starting...",
+    "days_first_letter": "d",
+    "hours_first_letter": "h",
+    "minutes_first_letter": "m",
+    "seconds_first_letter": "s"
 }
