--- a/share/locale/bg.json
+++ b/share/locale/bg.json
@@ -26,7 +26,7 @@
     "systray_upload_started_message": "Ползвател започна да ъплоудва файлове на компютъра Ви",
     "help_local_only": "Не използвайте Тор (само за разработване)",
     "help_stay_open": "Продължи споделянето след първото изтегляне",
-    "help_shutdown_timeout": "Спри споделянето след дадено количество секунди",
+    "help_autostop_timer": "Спри споделянето след дадено количество секунди",
     "help_stealth": "Използвай клиент авторизация (напреднал)",
     "help_receive": "Получаване на дялове вместо изпращане",
     "help_debug": "Протоколирай OnionShare грешки на stdout и уеб грешки на диск",
