--- a/share/locale/fa.json
+++ b/share/locale/fa.json
@@ -25,7 +25,7 @@
     "systray_upload_started_message": "یک کاربر شروع به آپلود فایل بر روی کامپیوتر شما کرده است",
     "help_local_only": "عدم استفاده از Tor (فقط برای توسعه)",
     "help_stay_open": "ادامه اشتراک گذاری پس از ارسال دانلود ها",
-    "help_shutdown_timeout": "توقف به اشتراک گذاری پس از میزان ثانیه ای مشخص",
+    "help_autostop_timer": "توقف به اشتراک گذاری پس از میزان ثانیه ای مشخص",
     "help_stealth": "استفاده از احراز هویت کلاینت (پیشرفته)",
     "help_receive": "دریافت اشتراک به جای ارسال آن",
     "help_debug": "لاگ کردن خطاهای OnionShare روی stdout، و خطاهای وب بر روی دیسک",
