--- a/share/locale/ru.json
+++ b/share/locale/ru.json
@@ -51,7 +51,7 @@
     "systray_upload_started_message": "Пользователь начал загрузку файлов на Ваш компьютер",
     "help_local_only": "Не использовать Tor (только для разработки)",
     "help_stay_open": "Продолжить отправку после первого скачивания",
-    "help_shutdown_timeout": "Остановить отправку после заданного количества секунд",
+    "help_autostop_timer": "Остановить отправку после заданного количества секунд",
     "help_stealth": "Использовать авторизацию клиента (дополнительно)",
     "help_receive": "Получать загрузки вместо их отправки",
     "help_debug": "Направлять сообщения об ошибках OnionShare в stdout, ошибки сети сохранять на диск",
