--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -20,8 +20,8 @@
     "large_filesize": "Warning: Sending a large share could take hours",
     "help_local_only": "Don't use Tor (only for development)",
     "help_stay_open": "Continue sharing after files have been sent",
-    "help_startup_timer": "Schedule this share to start N seconds from now",
-    "help_shutdown_timeout": "Stop sharing after a given amount of seconds",
+    "help_autostart_timer": "Schedule this share to start N seconds from now",
+    "help_autostop_timer": "Stop sharing after a given amount of seconds",
     "help_stealth": "Use client authorization (advanced)",
     "help_receive": "Receive shares instead of sending them",
     "help_debug": "Log OnionShare errors to stdout, and web errors to disk",
