--- a/share/locale/ko.json
+++ b/share/locale/ko.json
@@ -26,7 +26,7 @@
     "systray_upload_started_message": "사용자가 파일들을 당신의 컴퓨터로 업로딩 하는것을 시작했습니다",
     "help_local_only": "Tor를 사용하지 마시오 (오직 개발자용)",
     "help_stay_open": "첫 다운로드 후 계속 공유하시오",
-    "help_shutdown_timeout": "정해진 초단위의 시간이 지난후 공유하는 것을 멈추시오",
+    "help_autostop_timer": "정해진 초단위의 시간이 지난후 공유하는 것을 멈추시오",
     "help_stealth": "고객 허가를 사용 (고급 수준의)",
     "help_receive": "그것들을 보내는것 대신 공유를 받으시오",
     "help_debug": "어니언쉐어 에러들은 표준 출력 장치로 접속하고, 웹 에러들은 디스크로 접속  ",
