--- a/share/locale/pt_BR.json
+++ b/share/locale/pt_BR.json
@@ -25,7 +25,7 @@
     "systray_upload_started_message": "Alguém começou a carregar arquivos no seu computador",
     "help_local_only": "Não use Tor (unicamente para programação)",
     "help_stay_open": "Continuar a compartilhar após o envio de documentos",
-    "help_shutdown_timeout": "Parar de compartilhar após um número determinado de segundos",
+    "help_autostop_timer": "Parar de compartilhar após um número determinado de segundos",
     "help_stealth": "Usar autorização de cliente (avançado)",
     "help_receive": "Receber compartilhamentos ao invés de enviá-los",
     "help_debug": "Registrar erros do OnionShare no stdout e erros de rede, no disco",
